Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.106     2015-10-11 00:00:09Z
          - bump prereq version for [InstallGuide] (RT#107659)
          - bump prereq version for [Test::PodSpelling] (RT#107660)

0.105     2015-09-27 17:23:09Z
          - fix cleanup of old LICENSE file after moving it to LICENCE during
            release (broken in 0.103)
          - fix declared version dependency on [Test::Kwalitee], to ensure it
            has the "filename" configuration option (RT#107362)

0.104     2015-09-19 21:48:10Z
          - add a L<> around the support mailing list address woven into pod
          - automatically use "LICENCE" rather than "LICENSE" in distributions
            with first-come maintainers who are not Americans

0.103     2015-09-04 02:22:42Z
          - switch to [MungeFile] for munging
            Dist::Zilla::MintingProfile::Author::ETHER and its data files
            during the build
          - weave a standard SUPPORT section into pod, appending it to any
            existing content in that section

0.102     2015-08-15 02:15:25Z
          - declare proper prereq version for Pod::Weaver::Section::Legal
          - switch from one hacky mechanism to determine the 'Legal' pod
            header to another hacky mechanism, but at least this one is more
            likely to do what I want
          - use :PerlExecFiles in [Test::Compile]
          - [AutoPrereqs] now looks for develop prerequisites in xt/
          - dist.ini in newly-minted dists will now never have trailing
            whitespace

0.101     2015-08-08 20:18:26Z
          - depend on the most recent List transformer, for the text wrapping
            feature
          - add use of the Verbatim transformer to the weaver plugin bundle
          - LICENSE file is now renamed as LICENCE for my own distributions
            (where I have authority) (or when the 'licence' option is set to