@@ -29,8 +29,8 @@ Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0.008
 Dist::Zilla::Plugin::Test::ChangesHasContent = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 2.000003
-Dist::Zilla::Plugin::PodSyntaxTests = 0
-Dist::Zilla::Plugin::PodCoverageTests = 0
+Dist::Zilla::Plugin::PodSyntaxTests = 5.040
+Dist::Zilla::Plugin::PodCoverageTests = 5.040
 Dist::Zilla::Plugin::Test::PodSpelling = 2.006003
 ;Dist::Zilla::Plugin::Test::Pod::LinkCheck = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 1.002
