@@ -112,9 +112,9 @@ my @expected_files = qw(
     xt/release/distmeta.t
     xt/release/minimum-version.t
     xt/author/mojibake.t
-    xt/release/pod-coverage.t
+    xt/author/pod-coverage.t
     xt/release/pod-no404s.t
-    xt/release/pod-syntax.t
+    xt/author/pod-syntax.t
     xt/release/portability.t
 );
 
