@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - bump prereq version for [PodSyntaxTests], [PodCoverageTests] for
+            the new xt/author placement
 
 0.106     2015-10-11 00:00:09Z
           - bump prereq version for [InstallGuide] (RT#107659)
